# llm-compressor

backend/: Cargo.toml
backend/src/: compressor.rs  main.rs
backend/src/compressor/: controller.rs  service.rs
research/: .gitignore  README.md  llmc_cli.py  notatki.md  prezentacja.md  pyproject.toml
research/src/: 0_zip.ipynb  1_baseline.ipynb  2_vectorized.ipynb  3_vectorized_quantized.ipynb  4_powerful_baseline.ipynb  5_gpt2.ipynb  6_distilgpt2.ipynb  7_results_report.ipynb
research/src/debug/: debug_vectorized.py
