[package]
name = "llmc-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
candle-core = { version = "0.9.2", features = ["accelerate", "metal"] }
candle-nn = { version = "0.9.2", features = ["accelerate", "metal"] }
candle-transformers = { version = "0.9.2", features = ["accelerate", "metal"] }
tokenizers = "0.22.2"
hf-hub = "0.4.3"
anyhow = "1.0.97"
byteorder = "1.5.0"
constriction = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.8.8"
tokio = { version = "1", features = ["full"]}
