[package]
name = "llmc-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# LLMs
candle-core = { version = "0.9.2", features = ["accelerate", "metal"] }
candle-nn = { version = "0.9.2", features = ["accelerate", "metal"] }
candle-transformers = { version = "0.9.2", features = ["accelerate", "metal"] }
tokenizers = "0.22.2"
hf-hub = "0.4.3"

# Compression
anyhow = "1.0.97"
byteorder = "1.5.0"
constriction = "0.4.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Web server
axum = "0.8.8"
tokio = { version = "1", features = ["full"]}

# DB
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "tls-rustls", "macros"] }
dotenvy = "0.15"