[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-compressor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "constriction>=0.4.2",
    "matplotlib>=3.10.8",
    "numpy>=1.26.0",
    "pandas>=3.0.1",
    "torch>=2.10.0",
    "transformers>=5.2.0",
]

[project.scripts]
llmc = "llmc_cli:main"

[tool.setuptools]
py-modules = ["llmc_cli"]
